# SnapKeyAdvanced

./: CMakeLists.txt  README.md  config.json
include/: resource.h
src/: SnapKeyAdvanced.cpp
src/assets/: resources.rc
